# data-access-layer

./: .gitignore  README.md  aaa.py  pyproject.toml
.claude/: settings.local.json
dal/: __init__.py  abc.py  csv_handler.py  json_handler.py  pkl_handler.py  post_processing.py  sqlite_handler.py  xlsx_handler.py
data_access_layer/: __init__.py  abc.py  csv_handler.py  json_handler.py  post_processing.py  xlsx_handler.py
docs/superpowers/plans/: 2026-04-27-data-access-layer-implementation.md  2026-04-28-sqlite-handler-implementation.md  2026-04-28-xlsx-handler-api-redesign.md  2026-05-08-type-coercion.md  2026-05-09-async-support.md
docs/superpowers/specs/: 2026-04-27-data-access-layer-design.md  2026-04-28-sqlite-handler-design.md  2026-04-28-xlsx-handler-api-redesign.md  2026-05-08-type-coercion-design.md  2026-05-09-async-support-design.md
examples/: basic_usage.py
examples/output/: users.json  users.pkl  users.xlsx  users_append.json
tests/: test_new_api.py
tests/integration/: test_csv_handler.py  test_json_handler.py  test_pkl_handler.py  test_sqlite_handler.py  test_xlsx_handler.py
tests/temp_test/: test2.csv
tests/unit/: test_async_abc.py  test_async_csv_handler.py  test_async_json_handler.py  test_async_pkl_handler.py  test_async_sqlite_handler.py  test_async_xlsx_handler.py  test_csv_handler.py  test_json_handler.py  test_pkl_handler.py  test_post_processing.py  test_sqlite_handler.py  test_xlsx_handler.py
