[tool.poetry]
name = "data-access-layer"
version = "0.1.0"
description = "General-purpose toolkits for data accessing with unified handler interface"
authors = ["Hermin-Yakovski"]
readme = "README.md"
packages = [{include = "dal"}]
include = ["dal/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^24.0.0"
aiofiles = {version = "^23.0.0", optional = true}
aiosqlite = {version = "^0.19.0", optional = true}

[tool.poetry.extras]
xlsx = ["openpyxl"]
all = ["openpyxl"]
async = ["aiofiles", "aiosqlite"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.8"
mypy = "^1.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
