[tool.poetry]
name = "data-access-layer"
version = "0.1.0"
description = "General-purpose toolkits for data accessing with unified handler interface"
authors = ["Hermin-Yakovski"]
readme = "README.md"
packages = [{include = "data_access_layer"}]
include = ["data_access_layer/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.0"
aiofiles = {version = "^23.0.0", optional = true}
aiosqlite = {version = "^0.19.0", optional = true}

[tool.poetry.extras]
async = ["aiofiles", "aiosqlite"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.8"
mypy = "^1.10"
types-aiofiles = "^25.1.0"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests", ".venv", "dist", "build"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
exclude = ["tests"]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
